// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When given a danger message Message renders a snapshot properly 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  className="fade toast"
  role="alert"
  variant="danger"
>
  <div
    className="toast-header"
  >
    <button
      className="close ml-2 mb-1"
      data-dismiss="toast"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
      <span
        className="sr-only"
      >
        Close
      </span>
    </button>
  </div>
  <div
    className="toast-body"
  >
    Hello, World!
  </div>
</div>
`;

exports[`When given a success message Message renders a snapshot properly 1`] = `
<div
  aria-atomic="true"
  aria-live="assertive"
  className="fade toast"
  role="alert"
  variant="success"
>
  <div
    className="toast-header"
  >
    Title
    <button
      className="close ml-2 mb-1"
      data-dismiss="toast"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
      <span
        className="sr-only"
      >
        Close
      </span>
    </button>
  </div>
  <div
    className="toast-body"
  >
    Hello, World!
  </div>
</div>
`;
